# aiBass

./: .cproject  .gitignore  .mxproject  .project  Cargo.toml  Memoria_TFG_aiBass.md  README.md  aiBass.ioc  aiBass.launch
.cargo/: config.toml
Core/Inc/: FreeRTOSConfig.h  LSM6DSL.h  NanoEdgeAI.h  WS2812.h  dfsdm.h  main.h  stm32l4xx_it.h
Core/Src/: LSM6DSL.c  WS2812.c  adc.c  dfsdm.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  octospi.c  spi.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  tim.c  usart.c
Debug/: makefile
Debug/Core/Src/: main.cyclo  stm32l4xx_hal_msp.cyclo  subdir.mk
Debug/Drivers/STM32L4xx_HAL_Driver/Src/: subdir.mk
defensa/: aiBass_defensa.odp  aiBass_defensa.pptx
memoria/: Memoria_TFG_aiBass.md
src/: acquisition.rs  board.rs  main.rs  pitch.rs  ui.rs
